har fixet headeren & menuen
+ tilføjet nogle ekstra css ting

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 <div class="wrapper">
-<header class="main-head">Gemayaca</header>
+<header class="main-head">Gemayaca
 <nav class="main-nav">
     <ul>
         <li><a href="index.html">Forside</a></li>
@@ -17,6 +17,7 @@
         <li><a href="nyhedsbrev.html">Nyhedsbrev</a></li>
     </ul>
 </nav>
+</header>
 <article class ="content">
     <img src="adpicture.jpg" alt="Advertisement">
 </article>
