--- a/nyhedsbrev.html
+++ b/nyhedsbrev.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
-<title>Gemayaca</title>
+<title>Nyhedsbrev</title>
 <link rel="stylesheet" href="style.css">
 </head>
 <body>
 <div class="wrapper">
-<header class="main-head">Gemayaca</header>
+<header class="main-head">Gemayaca
 <nav class="main-nav">
     <ul>
         <li><a href="index.html">Forside</a></li>
@@ -17,8 +17,30 @@
         <li><a href="nyhedsbrev.html">Nyhedsbrev</a></li>
     </ul>
 </nav>
+</header>
 <article class ="content">
-    <h1>Nyhedsbrev</h1>
+    <h1>Bliv en del af Gemayaca familien!</h1>
+    <h2>Tilmeld dig Gemayaca's nyhedsbrev & få tilsendt</h2>
+    <p> - Tilbud & Kampagner</p>
+    <p> - De Seneste Nyheder</p>
+    <p> - En Særlig Velkomstgave</p>
+    <img src="nyhedsbrev.png" alt="nyhedsbrev" width="40%" class="center">
+    <h2>TILMELD DIG OG FÅ 10% RABAT!</h2>
+    <div class="center">
+    <form class="form">
+        Navn:<br>
+        <input type="text" name="firstname"><br>
+        E-Mail:<br>
+        <input type="text" name="lastname">
+      </form>
+      <form class="form">
+        Adresse:<br>
+        <input type="text" name="firstname"><br>
+        Tlf. Nr.:<br>
+        <input type="text" name="lastname">
+      </form>
+      <p><button type="button">Tilmeld Nu!</button></p>
+    </div>
 </article>
 <footer class="main-footer">
     <img src="footer.png" alt="footer" width="100%">
