--- a/shop.html
+++ b/shop.html
@@ -8,15 +8,16 @@
 </head>
 <body>
 <div class="wrapper">
-<header class="main-head">Gemayaca</header>
-<nav class="main-nav">
-    <ul>
-        <li><a href="index.html">Forside</a></li>
-        <li><a href="shop.html">Shop</a></li>
-        <li><a href="designselv.html">Design Din Egen</a></li>
-        <li><a href="nyhedsbrev.html">Nyhedsbrev</a></li>
-    </ul>
-</nav>
+        <header class="main-head">Gemayaca
+                <nav class="main-nav">
+                    <ul>
+                        <li><a href="index.html">Forside</a></li>
+                        <li><a href="shop.html">Shop</a></li>
+                        <li><a href="designselv.html">Design Din Egen</a></li>
+                        <li><a href="nyhedsbrev.html">Nyhedsbrev</a></li>
+                    </ul>
+                </nav>
+                </header>
 <article class ="content">
     <img src="adpicture.jpg" alt="Advertisement">
 </article>
