--- a/designselv.html
+++ b/designselv.html
@@ -5,25 +5,24 @@
     <meta name="viewport" content="width=device-width">
 <title>Gemayaca</title>
 <link rel="stylesheet" href="style.css">
+<header class="main-head">Gemayaca</header>
+	<nav class="main-nav">
+    <ul>
+        <li><a href="index.html">Forside</a></li>
+        <li><a href="shop.html">Shop</a></li>
+        <li><a href="designselv.html">Design Din Egen</a></li>
+        <li><a href="nyhedsbrev.html">Nyhedsbrev</a></li>
+    </ul>
+</nav>
 </head>
-<body>
 <div class="wrapper">
-        <header class="main-head">Gemayaca
-                <nav class="main-nav">
-                    <ul>
-                        <li><a href="index.html">Forside</a></li>
-                        <li><a href="shop.html">Shop</a></li>
-                        <li><a href="designselv.html">Design Din Egen</a></li>
-                        <li><a href="nyhedsbrev.html">Nyhedsbrev</a></li>
-                    </ul>
-                </nav>
-                </header>
-<article class ="content">
-    <img src="adpicture.jpg" alt="Advertisement">
-</article>
+<body>
+	<article class ="content">
+		
+	</article>
+</body>
 <footer class="main-footer">
-    <img src="footer.png" alt="footer" width="100%">
+    <img class="Ikoner" src="footer.png" alt="ikoner af sociale medier og kontaktoplysninger." >
 </footer>
 </div>
-</body>
 </html>
