--- a/index.html
+++ b/index.html
@@ -4,26 +4,42 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
 <title>Gemayaca</title>
-<link rel="stylesheet" href="style.css">
+<link rel="stylesheet" href="../Downloads/gemayaca_final/style.css">
+<header class="main-head">Gemayaca</header>
+	<nav class="main-nav">
+    	<ul>
+        	<li><a href="../Downloads/gemayaca_final/index.html">Forside</a></li>
+        	<li><a href="../Downloads/gemayaca_final/shop.html">Shop</a></li>
+        	<li><a href="../Downloads/gemayaca_final/designselv.html">Design Din Egen</a></li>
+        	<li><a href="../Downloads/gemayaca_final/nyhedsbrev.html">Nyhedsbrev</a></li>
+    	</ul>
+	</nav>
 </head>
-<body>
-<div class="wrapper">
-<header class="main-head">Gemayaca
-<nav class="main-nav">
-    <ul>
-        <li><a href="index.html">Forside</a></li>
-        <li><a href="shop.html">Shop</a></li>
-        <li><a href="designselv.html">Design Din Egen</a></li>
-        <li><a href="nyhedsbrev.html">Nyhedsbrev</a></li>
-    </ul>
-</nav>
-</header>
-<article class ="content">
-    <img src="adpicture.jpg" alt="Advertisement">
-</article>
+
+	<div class="wrapper">
+		<body>
+			<article class ="content">
+    			<img src="../Downloads/gemayaca_final/adpicture.jpg" alt="Advertisement">
+			</article>
+	</body>
+		<article class ="content">
+		<h3 style="font-family: calibri;"><i>Vi gør det mindre vand'skeligt for dig</i></h3> 
+			<h2> Bedst i test</h2>
+		<h4> Sensor låg - Helt håndfri</h4>
+			<h5>Gemayaca flasken blev i 2019 kåret som den bedste vandflaske på markedet!
+			Vores låg med sensor gør, at du aldrig behøver at åbne et låg igen.
+			Det eneste du skal gøre er at fører flasken op til munden og drikke.
+			Den åbner helt automatisk!</h5>
+ 
+		</article>
+		
+		
+		
+	
+		
+		
 <footer class="main-footer">
-    <img src="footer.png" alt="footer" width="100%">
+    <img class="Ikoner" src="../Downloads/gemayaca_final/footer.png" alt="ikoner af sociale medier og kontaktoplysninger." >
 </footer>
 </div>
-</body>
 </html>
