--- a/nyhedsbrev.html
+++ b/nyhedsbrev.html
@@ -3,48 +3,26 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
-<title>Nyhedsbrev</title>
+<title>Gemayaca</title>
 <link rel="stylesheet" href="style.css">
+<header class="main-head">Gemayaca</header>
+	<nav class="main-nav">
+    	<ul>
+        	<li><a href="index.html">Forside</a></li>
+        	<li><a href="shop.html">Shop</a></li>
+        	<li><a href="designselv.html">Design Din Egen</a></li>
+        	<li><a href="nyhedsbrev.html">Nyhedsbrev</a></li>
+    	</ul>
+	</nav>
 </head>
-<body>
 <div class="wrapper">
-<header class="main-head">Gemayaca
-<nav class="main-nav">
-    <ul>
-        <li><a href="index.html">Forside</a></li>
-        <li><a href="shop.html">Shop</a></li>
-        <li><a href="designselv.html">Design Din Egen</a></li>
-        <li><a href="nyhedsbrev.html">Nyhedsbrev</a></li>
-    </ul>
-</nav>
-</header>
-<article class ="content">
-    <h1>Bliv en del af Gemayaca familien!</h1>
-    <h2>Tilmeld dig Gemayaca's nyhedsbrev & få tilsendt</h2>
-    <p> - Tilbud & Kampagner</p>
-    <p> - De Seneste Nyheder</p>
-    <p> - En Særlig Velkomstgave</p>
-    <img src="nyhedsbrev.png" alt="nyhedsbrev" width="40%" class="center">
-    <h2>TILMELD DIG OG FÅ 10% RABAT!</h2>
-    <div class="center">
-    <form class="form">
-        Navn:<br>
-        <input type="text" name="firstname"><br>
-        E-Mail:<br>
-        <input type="text" name="lastname">
-      </form>
-      <form class="form">
-        Adresse:<br>
-        <input type="text" name="firstname"><br>
-        Tlf. Nr.:<br>
-        <input type="text" name="lastname">
-      </form>
-      <p><button type="button">Tilmeld Nu!</button></p>
-    </div>
-</article>
+	<body>
+		<article class ="content">
+    		<h1>Nyhedsbrev</h1>
+		</article>
+	</body>
 <footer class="main-footer">
-    <img src="footer.png" alt="footer" width="100%">
+    <img class="Ikoner" src="footer.png" alt="ikoner af sociale medier og kontaktoplysninger." >
 </footer>
 </div>
-</body>
 </html>
